<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    tools:context=".ui.activities.TriviaAdminActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_margin="12dp"
        android:fontFamily="@font/montserrat_regular"
        android:text="@string/Edit_Trivia"
        android:textAlignment="center"
        android:textColor="@android:color/black"
        android:textSize="24sp" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/ilPrompt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etPrompt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/montserrat_regular"
            android:hint="@string/Prompt" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/ilCategory"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etCategory"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/montserrat_regular"
            android:hint="@string/Category" />

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/btnEditTriviaQuestion"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#FF038056"
        android:fontFamily="@font/montserrat_regular"
        android:text="@string/Edit_Trivia"
        android:textColor="@android:color/white"
        app:backgroundTint="#038056" />

</LinearLayout>